# whale-strike-navigator

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: risk.py  vessel.py  whale.py
backend/app/routers/: incidents.py  risk.py  species.py  vessels.py  whale_zones.py
backend/app/services/: data_loader.py  scheduler.py
backend/app/utils/: cache.py  logging.py  species.py
data/processed/: backtest_report.json  backtest_report.txt  grid_cells.parquet  risk_grid_01.parquet  risk_grid_02.parquet  risk_grid_03.parquet  risk_grid_04.parquet  risk_grid_05.parquet  risk_grid_06.parquet  risk_grid_07.parquet  risk_grid_08.parquet  risk_grid_09.parquet  risk_grid_10.parquet  risk_grid_11.parquet  risk_grid_12.parquet  risk_grid_all.parquet  shipping_density_01.parquet  shipping_density_02.parquet  shipping_density_03.parquet  shipping_density_04.parquet  shipping_density_05.parquet  shipping_density_06.parquet  shipping_density_07.parquet  shipping_density_08.parquet  shipping_density_09.parquet  shipping_density_10.parquet  shipping_density_11.parquet  shipping_density_12.parquet  validation_report.json  validation_report.txt  whale_presence_01.parquet  whale_presence_02.parquet  whale_presence_03.parquet  whale_presence_04.parquet  whale_presence_05.parquet  whale_presence_06.parquet  whale_presence_07.parquet  whale_presence_08.parquet  whale_presence_09.parquet  whale_presence_10.parquet  (+2 more)
docs/: methodology.md
frontend/: package-lock.json  package.json
(+50 files in other folders)
